# airline_customer_reviews

./: README.md  app-draft.py  app.py  config.py  new-ui-app.py  orig-app.py  pyproject.toml  setup.py
models/: dec_tree.joblib
notebooks/: app-prod.ipynb  eda.ipynb  ml-app.ipynb  ml.ipynb  preprocessing.ipynb
src/: categorical_encoder.py  feature_importance.py  train_evaluate.py
