[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["erwincarlogonzales <erwincarlogonzales@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numba = "^0.60.0"
seaborn = "^0.13.2"
numpy = "2.0.0"
streamlit = "^1.38.0"
lime = "^0.2.0.1"
shap = "^0.46.0"
lightgbm = "^4.5.0"
imbalanced-learn = "^0.14.0"
plotly = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
